panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__enum__test_enum_value_in_integer_constant_expression_position.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/enum/test_enum_value_in_integer_constant_expression_position.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/enum/test_enum_value_in_integer_constant_expression_position.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (enum E~2
            (enumerators `unsigned int`
               (enumerator A~3 0 `int` 0)
               (enumerator B~4 1 `int` 1)
               (enumerator C~5 2 `int` 2)))
         (struct T~6
            (member x @0[0:2] `int`))
         (definition xs~7 `array<int; 1>`
            (braced
               (subobject +0 (42 `int`))))
         (return
            (deref `int`
               (ptr-add `ptr<int>`
                  (noop-type-conversion `ptr<int>`
                     (addressof `ptr<array<int; 1>>`
                        (xs~7 `array<int; 1>`)))
                  (sign-extend `long` (0 `int`))))))))

----- stderr -----
