panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__enum__test_error_enum_is_compatible_with_underlying_type.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/enum/test_error_enum_is_compatible_with_underlying_type.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/enum/test_error_enum_is_compatible_with_underlying_type.c"
   (enum E~0
      (enumerators `unsigned int`
         (enumerator A~1 0 `int` 0)
         (enumerator B~2 1 `int` 1)
         (enumerator C~3 2 `int` 2)))
   (function-definition external
      main~4 `fn() -> int`
      (compound-statement
         (definition x~6 `enum E~0 complete` (noop-type-conversion `enum E~0 complete` (A `int`)))
         (expression (1 `int`)))))

----- stderr -----
