panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__enum__test_unnamed_enum_without_explicit_values_enumerators.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/enum/test_unnamed_enum_without_explicit_values_enumerators.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/enum/test_unnamed_enum_without_explicit_values_enumerators.c"
   (declaration external printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (enum ∅~1
      (enumerators `unsigned int`
         (enumerator A~2 0 `int` 0)
         (enumerator B~3 1 `int` 1)
         (enumerator C~4 2 `int` 2)
         (enumerator D~5 3 `int` 3)))
   (definition external b~6 `int` (B `int`))
   (function-definition external
      main~7 `fn() -> int`
      (compound-statement
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 20>>`
                        (string `array<char; 20>` "%d + %d + %d == %d\n\0"))))
               (A `int`)
               (b~6 `int`)
               (D `int`)
               (add `int` (add `int` (A `int`) (b~6 `int`)) (D `int`))))
         (return (C `int`)))))

----- stderr -----
