panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__enum__test_variable_redeclared_as_enumerator.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/enum/test_variable_redeclared_as_enumerator.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/enum/test_variable_redeclared_as_enumerator.c"
   (tentative-definition external Value~0 `int` ∅)
   (enum E~1
      (enumerators
         (enumerator Other~2 0 `int` 0)
         (enumerator Value~0 1 `int` 1))))

----- stderr -----
